fix: visible contacts comp with open menu mobile

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -8,6 +8,8 @@
   width: 100%;
 
   padding: 2rem;
+
+  z-index: 2;
 }
 
 .Contacts__nav {
